--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,11 +16,17 @@
 
 <resources>
     <style name="AppTheme" parent="android:Theme.Material">
+        <item name="android:colorPrimary">@color/primary</item>
+        <item name="android:colorPrimaryDark">@color/primary_dark</item>
+        <item name="android:colorAccent">@color/accent</item>
         <item name="android:windowBackground">@color/window_background</item>
     </style>
     <style name="Widget.Material.SeekBar.Vertical" parent="@android:Widget.Holo.SeekBar">
         <item name="android:indeterminateOnly">false</item>
         <item name="android:progressDrawable">@drawable/scrubber_progress_vertical_holo_dark</item>
+        <item name="android:colorPrimary">@color/primary</item>
+        <item name="android:colorPrimaryDark">@color/primary_dark</item>
+        <item name="android:colorAccent">@color/accent</item>
 <!-- not public       <item name="android:indeterminateDrawable">@android:drawable/scrubber_progress_horizontal_holo_dark</item> -->
         <item name="android:minWidth">33dip</item>
         <item name="android:maxWidth">33dip</item>
